<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_800"
    tools:context=".EventHistoryActivity">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupFilters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:singleSelection="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_all"
            android:checked="true"
            style="@style/Widget.Material3.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipUnreviewed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_unreviewed"
            style="@style/Widget.Material3.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_today"
            style="@style/Widget.Material3.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_week"
            style="@style/Widget.Material3.Chip.Filter" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/chipGroupFilters"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_event" />

    <TextView
        android:id="@+id/tvEmptyState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_state"
        android:textSize="18sp"
        android:textColor="@color/gray_400"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
